--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Mustafa</td>
+                <td>Mustafa Çebi</td>
             </tr>
 
         </table>
